# jupyter-server-proxy

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  RELEASE.md  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml  linkcheck.yaml  publish.yaml  test.yaml  test.yml
contrib/: README.rst
contrib/code-server-traitlet/: README.md  jupyter_notebook_config.py
contrib/rstudio/: Dockerfile  setup.py
contrib/rstudio/jupyter_rsession_proxy/: __init__.py
contrib/template/: cookiecutter.json
contrib/template/{{cookiecutter.project_name}}/: setup.py
contrib/template/{{cookiecutter.project_name}}/jupyter_{{cookiecutter.project_name}}_proxy/: __init__.py
contrib/theia/: README.rst  setup.py
contrib/theia/jupyter_theia_proxy/: __init__.py
docs/: Makefile  arbitrary-ports-hosts.rst  arbitrary-ports.rst  conf.py  examples.rst  index.rst  install.rst  launchers.rst  make.bat  requirements.txt  server-process.rst
docs/contributing/: release.rst
docs/convenience/: new.rst
docs/extensions/: serverprocess_documenter.py
docs/source/: api.rst  arbitrary-ports-hosts.md  changelog.md  conf.py  examples.md  index.md  index.rst  install.md  install.rst  launchers.md  launchers.rst  server-process.md  server-process.rst  standalone.md
docs/source/contributing/: release.rst
docs/source/convenience/: new.md
jupyter_rsession_proxy/: __init__.py
jupyter_server_proxy/: __init__.py  _version.py  api.py  api.yml  config.py  handlers.py  manager.py  native_proxy.py  rawsocket.py  unixsock.py  utils.py  websocket.py  websockify.py
jupyter_server_proxy/etc/: jupyter-server-proxy-serverextension.json  nbextension.json  serverextension.json
jupyter_server_proxy/etc/jupyter_server_config.d/: jupyter-server-proxy.json
jupyter_server_proxy/etc/nbconfig/tree.d/: jupyter-server-proxy.json
jupyter_server_proxy/standalone/: __init__.py  activity.py  app.py  proxy.py
jupyter_server_proxy/static/: tree.js
jupyterlab-nbserverproxy/: README.md  package.json
jupyterlab-nbserverproxy/src/: index.ts
jupyterlab-rsessionproxy/: package.json  tsconfig.json
jupyterlab-rsessionproxy/src/: index.ts
jupyterlab-rsessionproxy/style/: index.css
jupyterlab-server-proxy/: .gitignore  README.md  package.json  tsconfig.json
jupyterlab-server-proxy/schema/: plugin.json
jupyterlab-server-proxy/src/: index.ts
jupyterlab-server-proxy/style/: index.css
labextension/: .gitignore  .yarnrc  .yarnrc.yml  README.md  package.json
labextension/schema/: add-launcher-entries.json
labextension/src/: index.ts  manager.ts  restapi.ts  running.ts  serverproxy.ts  svg.d.ts  tokens.ts
nbrsessionproxy/: __init__.py  handlers.py
nbrsessionproxy/static/: main.js  tree.js
nbserverproxy/: __init__.py  api.py  config.py  handlers.py
nbserverproxy/etc/: nbextension.json  serverextension.json
nbserverproxy/static/: tree.js
tests/: conftest.py  pytest.ini  test_api.py  test_config.py  test_proxies.py  test_standalone.py  test_utils.py
tests/acceptance/: Classic.robot  Lab.robot  Notebook.robot  __init__.robot  test_acceptance.py
tests/acceptance/resources/: jupyter_config.json  jupyter_notebook_config.json
tests/resources/: eventstream.py  gzipserver.py  httpinfo.py  jupyter_server_config.py  proxyextension.py  rawsocket.py  redirectserver.py  websocket.py
tests/resources/dummyentrypoint/: pyproject.toml
tests/resources/dummyentrypoint/test_jsp_dummyentrypoint/: __init__.py  httpinfo.py
